a couple issues but almost there

--- a/mockup.html
+++ b/mockup.html
@@ -21,10 +21,10 @@
             <span class="item1">
         <h1 class="bh">Be <br>
             Healthy</h1> 
-            <p class="Lorem">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ea <br>
-                reiciendis voluptates tenetur, quo atque vel molestias possimus <br>
-                mollitia quam beatae architecto asperiores? Illo quis magnam <br> 
+            <p class="lorem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ea 
+                reiciendis voluptates tenetur, quo atque vel molestias possimus 
+                mollitia quam beatae architecto asperiores? Illo quis magnam 
                 alias eaque molestias error?
             </p>
             <h2>Browse Menu → </h2>
