eliminated unnecessary code, changed a couple html tags to be semantic

--- a/mockup.html
+++ b/mockup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="mockup.css">
 </head>
 <body>
-    <section class="header-bar">
+    <header class="header-bar">
         <h1 class="logo"><span>MI</span>HEALTH</h1>
         <p class="header-links">
             <a class="toplink" href="0" target="_blank">Breakfast</a>
@@ -15,7 +15,7 @@
             <a class="toplink" href="0" target="_blank">Dinner</a>
             <a class="toplink" href="0" target="_blank">Dessert</a>
         </p>
-    </section>
+    </header>
     <section class="be-healthy">
         <div class="b-container">
             <span class="item1">
